--- a/style.css
+++ b/style.css
@@ -42,6 +42,12 @@ body{
     font-size: 14px;
     color: #777;
 }
+.talk-to-me{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+    
 @media (min-width: 1024px) {
     .heading{
         font-size: 50px;
